<resources>
    <string name="app_name">app_gerenciador_de_tarefas</string>
    <string name="txt_criar">Criar</string>
    <string name="txt_reuniao">Reunião</string>
    <string name="txt_curso_de_java">Curso de Java</string>
    <string name="txt_prova_de_java">Prova de Java</string>
    <string name="txt_gerenciador_de_tarefas">Gerenciador de Tarefas!</string>
    <string name="txt_titulo_da_tarefa">Título da Tarefa</string>
    <string name="txt_descrico_da_tarefa">Descrição da tarefa</string>
    <string name="txt_data">xx/xx/xxxx</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_excluir">Excluir</string>
    <string name="txt_aula_de_ti">Aula de TI</string>
</resources>